crates/cash-parser/src/snapshots/cash_parser__tokenizer__tests__tokenize_unbraced_parameter_expansion-2.snap
---
source: cash-parser/src/tokenizer.rs
expression: "test_tokenizer(\"a$x\")?"
---
TokenizerResult(
  input: "a$x",
  result: [
    Word("a$x", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 3,
        line: 1,
        column: 4,
      ),
    )),
  ],
)
