crates/cash-parser/src/snapshots/cash_parser__tokenizer__tests__tokenize_unbraced_parameter_expansion.snap
---
source: cash-parser/src/tokenizer.rs
expression: "test_tokenizer(\"$x\")?"
---
TokenizerResult(
  input: "$x",
  result: [
    Word("$x", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 2,
        line: 1,
        column: 3,
      ),
    )),
  ],
)
